--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^18.2.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "encoding": "^0.1.13",
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.6",
     "framer-motion": "^10.16.4",
